# fastapi-boilerplate

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 12abea3008e8_create_refresh_tokens.py  19c41ff27aff_create_users_roles_permissions.py  a55059f1cd6b_add_mfa_fields_to_users.py
app/: main.py
app/core/: config.py  exceptions.py  jwt.py  logging.py  mfa.py  middleware.py  pagination.py  permissions.py  responses.py  schemas.py  security.py
app/domain/auth/: api.py  dependencies.py  exceptions.py  model.py  router.py  schema.py  service.py
app/domain/health/: api.py  router.py
app/domain/permission/: api.py  model.py  router.py  schema.py  service.py
app/domain/role/: api.py  model.py  router.py  schema.py  service.py
app/domain/user/: api.py  router.py  schema.py  service.py
app/infrastructure/db/: base.py  dependencies.py  repository.py  session.py
app/infrastructure/redis/: client.py
app/scripts/: create_user.py  seed_permissions.py  seed_roles.py
docker/: Dockerfile
scripts/: init_test_db.sh
tests/: conftest.py
tests/domain/auth/: test_api.py  test_permissions.py
tests/domain/permission/: test_api.py  test_permission_api.py
tests/domain/role/: test_api.py
tests/domain/user/: test_api.py
