[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2,<3" ]

[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = """\
  FastAPI boilerplate for building production-ready microservices with clean architecture, SQLAlchemy, async support, \
  and best practices out of the box.\
  """
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Hector Lozada", email = "hlozadaccs@outlook.com" } ]
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "argon2-cffi>=25.1,<26",
  "asyncpg>=0.31,<0.32",
  "fastapi>=0.128,<0.129",
  "pydantic[email]>=2.12.5,<3",
  "pydantic-settings>=2.12,<3",
  "pyotp>=2.9,<3; python_version>='3.14' and python_version<'4.0'",
  "python-jose[cryptography]>=3.5,<4",
  "qrcode[pil]>=8.2,<9; python_version>='3.14' and python_version<'4.0'",
  "redis>=7.1,<8",
  "sqlalchemy>=2.0.46,<3",
  "structlog>=25.5,<26",
  "uvicorn>=0.40,<0.41"
]

[dependency-groups]
dev = [
  "alembic>=1.18.3,<2",
  "bandit[toml]>=1.8,<2",
  "black>=26.1,<27",
  "detect-secrets>=1.5,<2",
  "httpx>=0.28.1,<0.29",
  "interrogate>=1.7,<2",
  "mypy>=1.19.1,<2",
  "pre-commit>=4.5.1,<5",
  "pyproject-fmt>=2.12.1,<3",
  "pytest>=9.0.2,<10",
  "pytest-asyncio>=1.3,<2",
  "pytest-cov>=7,<8",
  "radon>=6.0.1,<7",
  "ruff>=0.14.14,<0.15",
  "safety>=3.2,<4",
  "vulture>=2.14,<3"
]

[tool.poetry]
package-mode = false

[tool.ruff]
target-version = "py314"
line-length = 100
lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "C90", # mccabe (cyclomatic complexity)
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
lint.ignore = [
  "B008", # do not perform function calls in argument defaults
  "B904", # raise from within except (intentional for API errors)
  "E501", # line too long (handled by formatter)
]
lint.per-file-ignores."__init__.py" = [ "F401" ]
lint.per-file-ignores."app/scripts/*.py" = [ "C90" ]  # Allow higher complexity in scripts
lint.isort.known-first-party = [ "app" ]
lint.mccabe.max-complexity = 10

[tool.bandit]
exclude_dirs = [ "tests", "alembic/versions" ]
skips = [ "B101" ]  # Skip assert_used (common in tests)

[tool.mypy]
python_version = "3.14"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
overrides = [
  { module = "app.infrastructure.db.repository", disable_error_code = [ "attr-defined" ] },
  { module = "app.main", disable_error_code = [ "method-assign" ] },
  { module = "app.core.config", disable_error_code = [ "call-arg" ] },
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-nested-functions = true
fail-under = 40
exclude = [ "tests", "alembic" ]
verbose = 1

[tool.vulture]
min_confidence = 80
exclude = [ "tests/", "alembic/" ]
